--- a/gaming-catalog-app/firebase.json
+++ b/gaming-catalog-app/firebase.json
@@ -9,6 +9,17 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "script-src 'self'"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "**",
