--- a/.github/workflows/app-hosting-pull-request.yml
+++ b/.github/workflows/app-hosting-pull-request.yml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Build Angular app
       working-directory: ./gaming-catalog-app
-      run: npm build
+      run: npm run build
