--- a/gaming-catalog-app/package.json
+++ b/gaming-catalog-app/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
